Updated dependency to build in develop. Removed src folder.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=64.0","pip>=21.3"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -28,7 +28,7 @@ Issues = "https://github.com/jcouto/labdata/issues"
 #labdata2 = "labdata.cli:main"
 
 [tool.setuptools.packages.find]
-where = ["src"] 
+where = ["."] 
 include = ["labdata"]
 namespaces = false  # disable PEP 420 namespaces
 
