Added missing dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
 	     "minio",
 	     "datajoint",
 	     "boto3",
-	     "spython"
+	     "spython",
+	     "natsort",
+	     "pandas"
 ]
 dynamic = ["version"]
 
